--- a/composer.json
+++ b/composer.json
@@ -18,9 +18,9 @@
     }
   },
   "require": {
-    "php": "^7.1",
-    "guzzlehttp/guzzle": "^6.1.0",
-    "psr/log": "^1.0",
+    "php": "^7.1|^8.0",
+    "guzzlehttp/guzzle": "^6.1.0|^7.2",
+    "psr/log": "^1.0|^3.0",
     "psr/http-message": "^1.0",
     "psr/http-client": "^0.1"
   },
